--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -1,1 +1,7 @@
-<p>member-list works!</p>
+<section class="container">
+  <div class="row">
+    <div class="col-2 mb-4" *ngFor="let member of members">
+      <app-member-card [member]="member"></app-member-card>
+    </div>
+  </div>
+</section>
