add user profile, loading

--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -64,8 +64,8 @@
           *dropdownMenu
           id="dropdown-animated"
         >
-          <a href="#" class="dropdown-item">edit profile</a>
-          <a href="#" (click)="logout()" class="dropdown-item">logout</a>
+          <a class="dropdown-item" routerLink="/user/profile">edit profile</a>
+          <a (click)="logout()" class="dropdown-item">logout</a>
         </div>
       </div>
       <form
