--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -38,7 +38,7 @@
         <h4>Description</h4>
         <p>{{ member.introduction }}</p>
         <h4>Looking for:</h4>
-        <p>{{ member.looingFor }}</p>
+        <p>{{ member.lookingFor }}</p>
       </tab>
       <tab heading="Interests">
         <h4>Interests</h4>
