--- a/client/src/app/users/user-profile/user-profile.component.html
+++ b/client/src/app/users/user-profile/user-profile.component.html
@@ -95,6 +95,7 @@
 
       <tab heading="Edit Photos">
         <h4>Photos</h4>
+        <app-photo-editor [member]="memberProfile"></app-photo-editor>
       </tab>
     </tabset>
   </div>
