--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -51,7 +51,11 @@
         *ngIf="accountService.currentUser$ | async as user"
         dropdown
       >
-        <img [src]="user.avatar" class="me-2" alt="user" />
+        <img
+          [src]="user.avatar || './assets/user.png'"
+          class="me-2"
+          alt="user"
+        />
         <a
           class="dropdown-toggle text-black text-decoration-none"
           aria-controls="dropdown-animated"
