--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -61,7 +61,7 @@
           aria-controls="dropdown-animated"
           dropdownToggle
           id="button-animated"
-          >Welcome {{ user.userName | titlecase }}</a
+          >Welcome {{ user.knownAs | titlecase }}</a
         >
         <div
           class="dropdown-menu"
