--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -23,7 +23,7 @@
   <div class="card-body">
     <h6 class="cart-title text-center mb-1">
       <i class="fa fa-user me-2"></i>
-      <span>{{ member.knownAs }}</span>
+      <span>{{ member.knownAs }},{{ member.age }}</span>
     </h6>
     <p class="card-text card-muted text-center">{{ member.city }}</p>
   </div>
