--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -6,17 +6,20 @@
       alt="{{ member.knownAs }}"
     />
     <ul class="list-inline text-center animate member-icons">
-      <li
-        class="list-inline-item btn btn-warning"
-        routerLink="/members/{{ member.userName }}"
-      >
-        <i class="fa fa-user"></i>
+      <li class="list-inline-item" routerLink="/members/{{ member.userName }}">
+        <button class="btn btn-warning">
+          <i class="fa fa-user"></i>
+        </button>
       </li>
-      <li class="list-inline-item btn btn-warning">
-        <i class="fa fa-heart"></i>
+      <li class="list-inline-item">
+        <button class="btn btn-warning" (click)="addLike(member)">
+          <i class="fa fa-heart"></i>
+        </button>
       </li>
-      <li class="list-inline-item btn btn-warning">
-        <i class="fa fa-envelope"></i>
+      <li class="list-inline-item">
+        <button class="btn btn-warning">
+          <i class="fa fa-envelope"></i>
+        </button>
       </li>
     </ul>
   </div>
