--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -17,7 +17,11 @@
         </button>
       </li>
       <li class="list-inline-item">
-        <button class="btn btn-warning">
+        <button
+          class="btn btn-warning"
+          routerLink="/members/{{ member.userName }}"
+          [queryParams]="{ tab: 'Messages' }"
+        >
           <i class="fa fa-envelope"></i>
         </button>
       </li>
