--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -20,6 +20,7 @@
           <li class="nav-item">
             <a
               class="nav-link fw-semibold text-black fs-5"
+              [routerLinkActiveOptions]="{ exact: true }"
               routerLinkActive="active"
               routerLink="/members"
               >Matches</a
