add unit of work pattern and confirm service

--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -7,6 +7,9 @@
     <ul
       *ngIf="(messageService.messageThread$ | async)!.length > 0"
       class="chat"
+      #scrollMe
+      [scrollTop]="scrollMe.scrollHeight"
+      style="overflow-y: scroll; max-height: 500px"
     >
       <li *ngFor="let message of messageService.messageThread$ | async">
         <div>
